@@ -39,9 +39,10 @@ LIBDIR = $(top_builddir)/lib
 SUPPORTFILES = first.c test.h
 
 # These are all libcurl test programs
-noinst_PROGRAMS = lib500 lib501 lib502 lib503 lib504 lib505 lib506 lib507 \
-  lib508 lib509 lib510 lib511 lib512 lib513 lib514 lib515 lib516 lib517 \
-  lib518 lib519 lib520 lib521 lib523 lib524 lib525 lib526 lib527 lib530
+noinst_PROGRAMS = lib500 lib501 lib502 lib503 lib504 lib505 lib506	\
+  lib507 lib508 lib509 lib510 lib511 lib512 lib513 lib514 lib515 lib516	\
+  lib517 lib518 lib519 lib520 lib521 lib523 lib524 lib525 lib526 lib527	\
+  lib529 lib530
 
 lib500_SOURCES = lib500.c $(SUPPORTFILES)
 lib500_LDADD = $(LIBDIR)/libcurl.la
@@ -151,6 +152,11 @@ lib527_SOURCES = lib526.c $(SUPPORTFILES)
 lib527_CFLAGS = -DLIB527
 lib527_LDADD = $(LIBDIR)/libcurl.la
 lib527_DEPENDENCIES = $(LIBDIR)/libcurl.la
+
+lib529_SOURCES = lib525.c $(SUPPORTFILES)
+lib529_CFLAGS = -DLIB529
+lib529_LDADD = $(LIBDIR)/libcurl.la
+lib529_DEPENDENCIES = $(LIBDIR)/libcurl.la
 
 lib530_SOURCES = lib530.c $(SUPPORTFILES)
 lib530_CFLAGS = -DLIB530
